# MCPAuthGateway

./: README.md  mcp_oauth_service.py  mcp_server_instance.py
mcp_auth_gateway/: README.md  main.py  pyproject.toml
mcp_auth_gateway/auth_server/: __init__.py  endpoints.py  models.py  storage.py  utils.py
mcp_auth_gateway/core/: config.py  models.py
mcp_auth_gateway/mcp_gateway/: __init__.py  atag_endpoints.py  mcp_endpoints.py  models.py
mcp_auth_gateway/registry/: __init__.py  loader.py  models.py  registry_data.yaml
mcp_auth_gateway/tests/: test_auth_utils.py  test_registry_loader.py  test_token_manager_storage.py
mcp_auth_gateway/token_manager/: __init__.py  models.py  oauth_client.py  storage.py
